--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "pnotify": "^3.2.0",
     "pug": "~2.0.0-beta10",
     "randomstring": "^1.1.5",
+    "request": "^2.85.0",
     "rxjs": "^5.3.0",
     "serve-favicon": "~2.3.2",
     "socket.io": "^1.7.3",
